--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Minesweeper</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="bundle.js"></script>
+    <script src="bundle.min.js"></script>
   </body>
 </html>
